# cvmat_serializer

./: .gitignore  CMakeLists.txt  Connection.hpp  Task.hpp  client.cpp  connection.hpp  main.cpp  mat_serialization.hpp  serialize_test.cpp  server.cpp  stock.hpp
